# cruxible-core

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_DATA.md  context7.json  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-kev-model.yml  publish-kev-reference-world.yml  publish.yml
configs/: _template.yaml  car_parts.yaml
demos/: README.md
demos/case-law-monitoring/: README.md  config.yaml  courtlistener-reference.yaml
demos/drug-interactions/: README.md  config.yaml
demos/kev-triage/: README.md  SKILL.md  config.yaml  kev-reference.yaml  providers.py
demos/manufacturing-judgment-memory/: README.md  config.yaml
demos/mitre-attack/: README.md  config.yaml
demos/retail-catalog/: README.md
demos/sanctions-screening/: README.md  config.yaml
demos/supply-chain-blast-radius/: README.md  config.yaml
docs/: cli-reference.md  common-providers.md  concepts.md  config-reference.md  for-ai-agents.md  isolated-deployment.md  mcp-tools.md  quickstart.md  skill-classification-at-scale.md
kits/: README.md
kits/case-law-monitoring/: README.md  config.yaml
kits/kev-triage/: .mcp.json  README.md  config.yaml  kev-reference.yaml  providers.py
kits/retail-catalog/: README.md  config.yaml
kits/supply-chain-blast-radius/: README.md  config.yaml
scripts/: publish_kev_release.py  render_config_views.py
skills/analyze-feedback/: SKILL.md
skills/analyze-outcomes/: SKILL.md
skills/common-workflows/: SKILL.md
skills/create-world/: SKILL.md
skills/fork-and-fit/: SKILL.md
skills/fork-and-overlay/: SKILL.md
skills/onboard-domain/: SKILL.md
skills/prepare-data/: SKILL.md
skills/review-graph/: SKILL.md
skills/review-world/: SKILL.md
skills/user-review/: SKILL.md
src/cruxible_core/: __init__.py  canonical_views.py  composition_ownership.py  errors.py  (+10 more)
tests/: conftest.py  test_errors.py  test_evaluate.py  test_predicate.py
(+263 files in other folders)
